--- a/src/Music Player/assets/css/index.scss
+++ b/src/Music Player/assets/css/index.scss
@@ -43,9 +43,10 @@ body {
     @extend %base-button;
     background: variables.$mediumRedViolet;
     border: none;
-    border-radius: 50px;
     padding: 5px 6px;
     display: flex;
+    // Remove light blue background color on click on mobile devices
+    -webkit-tap-highlight-color: transparent;
 
     .svg--pause {
       display: none;
